# framework

./: README.md
framework_16/docs/: info  info~
framework_16/macropad/v1/: CMakeLists.txt  CMakeLists.txt~  i2c.c  i2c.h  macropad.h  macropad1.c  serial.c
framework_16/macropad/v2/: i2c.h  macropad1.c  usb_descriptors.c
framework_16/macropad/v3/: CMakeLists.txt  macropad.h  macropad1.c  macropad_usb.c  msc_disk.c  old_usb_descriptors.c
framework_16/macropad/v4/: macropad1.c  macropad_usb.c  msc_disk.c  serial.c
framework_16/macropad/v5/: CMakeLists.txt  i2c.c  keyboard.c  keyboard.h  led.c  led.h  macropad.h  macropad1.c  serial.c  serial.h  sleep.c  usb_utility.c
